added persisting the login, async pipe, home page and register form

--- a/WebApp/client/src/app/nav/nav.component.html
+++ b/WebApp/client/src/app/nav/nav.component.html
@@ -3,7 +3,7 @@
     <div class="container">
         <a class="navbar-brand" href="#">WebApp</a>
 
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav mr-auto" *ngIf="accountService.currentUser$ | async">
           <li class="nav-item">
             <a class="nav-link" href="#">Matches</a>
           </li>
@@ -15,7 +15,16 @@
           </li>
         </ul>
       
-      <form #loginForm="ngForm" class="d-flex" (ngSubmit)="login()" 
+      <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
+        <a class="dropdown-toggle text" dropdownToggle>Welcome user</a>
+        <div class="dropdown-menu mt-3" *dropdownMenu>
+          <a class="dropdown-item">Edit Profile</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" (click)="logout()" >Logout</a>
+        </div>
+      </div>
+
+      <form *ngIf="!(accountService.currentUser$ | async)" #loginForm="ngForm" class="d-flex" (ngSubmit)="login()" 
         autocomplete="off">
         <input
           name="username"
