--- a/WebApp/client/src/app/home/home.component.html
+++ b/WebApp/client/src/app/home/home.component.html
@@ -7,11 +7,11 @@
             <button class="btn btn-info btn-lg">Learn more</button>
         </div>
     </div>
-
+    
     <div *ngIf="registerMode" class="container">
         <div class="row justify-content-center">
             <div class="col-4">
-                <app-register></app-register>
+                <app-register (cancelRegister)="cancelRegisterMode($event)"></app-register>
             </div>
         </div>
     </div>
