added new theme, tidying up the app module bu using a shared module

--- a/WebApp/client/src/styles.css
+++ b/WebApp/client/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+a, 
+a:hover, a:focus, a:active{
+    text-decoration: none;
+    color: white;
+}
