cleaning up the member service, add filtering to the API and sorting functionality

--- a/WebApp/client/src/app/members/member-detail/member-detail.component.html
+++ b/WebApp/client/src/app/members/member-detail/member-detail.component.html
@@ -18,7 +18,7 @@
             <div class="card-body">
                 <div>
                     <strong>Last Active:</strong>
-                    <p>{{member.lastActive}}</p>
+                    <p>{{member.lastACtive}}</p>
                 </div>
             </div>
             <div class="card-body">
