--- a/WebApp/client/src/app/members/member-edit/member-edit.component.html
+++ b/WebApp/client/src/app/members/member-edit/member-edit.component.html
@@ -26,7 +26,7 @@
             <div class="card-body">
                 <div>
                     <strong>Last Active:</strong>
-                    <p>{{member.lastActive}}</p>
+                    <p>{{member.lastACtive}}</p>
                 </div>
             </div>
             <div class="card-body">
