--- a/WebApp/client/src/app/members/member-list/member-list.component.html
+++ b/WebApp/client/src/app/members/member-list/member-list.component.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="container mt-3">
-    <form #form="ngForm" class="form-inline mb-3" (ngSubmit)="loadMember()" autocomplete="off">
+    <form #form="ngForm" class="form-inline mb-3" (ngSubmit)="loadMembers()" autocomplete="off">
         <div class="form-group">
             <label>Age from: </label>
             <input type="number" class="form-control ml-1" style="width: 70px;" name="minAge" 
@@ -27,6 +27,26 @@
 
         <button class="btn btn-primary ml-1" type="submit">Apply Filters</button>
         <button (click)="resetFilters()" class="btn btn-info ml-1" type="submit">Reset Filters</button>
+
+        <div class="col">
+            <div class="btn-group float-right">
+                <button 
+                    type="button"
+                    class="btn btn-primary" 
+                    name="orderBy" 
+                    (click)="loadMembers()"
+                    btnRadio='lastACtive'
+                    [(ngModel)]="userParams.orderBy">Last Active</button>
+    
+                <button 
+                    type="button"
+                    class="btn btn-primary" 
+                    name="orderBy" 
+                    (click)="loadMembers()"
+                    btnRadio='created'
+                    [(ngModel)]="userParams.orderBy">Newest Members</button>
+            </div>
+        </div>
 
     </form>
 </div>
