--- a/WebApp/client/src/app/members/member-detail/member-detail.component.html
+++ b/WebApp/client/src/app/members/member-detail/member-detail.component.html
@@ -53,7 +53,7 @@
                     style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
             </tab>
             <tab heading='Messages'>
-                <p>Messages will go here</p>
+                <app-member-messages [username]="member.userName"></app-member-messages>
             </tab>
         </tabset>
     </div>
