--- a/WebApp/client/src/app/members/member-detail/member-detail.component.html
+++ b/WebApp/client/src/app/members/member-detail/member-detail.component.html
@@ -53,7 +53,7 @@
                     style="display: inline-block; margin-bottom: 20px;"></ngx-gallery>
             </tab>
             <tab heading='Messages' (selectTab)="onTabActivated($event)">
-                <app-member-messages [messages]="messages"></app-member-messages>
+                <app-member-messages [messages]="messages" [username]="member.userName"></app-member-messages>
             </tab>
         </tabset>
     </div>
